--- a/src/pages/IndustryCodes.page
+++ b/src/pages/IndustryCodes.page
@@ -26,6 +26,7 @@
             <apex:selectOption itemValue="1" itemlabel="Search SIC Code Using NAICS Code"/>
             <apex:selectOption itemValue="2" itemlabel="Search NAICS/SIC Codes By Selection"/>
             <apex:selectOption itemValue="3" itemlabel="Search By Keyword"/>
+            <apex:selectOption itemValue="4" itemlabel="About"/>
           </apex:selectRadio><p />
 
           <!-- Navigation buttons -->
@@ -34,17 +35,13 @@
           </apex:panelGroup>
         </apex:pageBlock>
       </apex:form>
-      <br />
-      <br />
-      <apex:image id="logo" value="{!URLFOR($Resource.wiregrass_resources, 'wiregrass.png')}"/>
-      <p>&nbsp;&copy; Wiregrass Code Technology 2014-15.&nbsp;&nbsp;Powered By: <strong>Salesforce.com</strong></p>
     </div>
   </div>
 
   <!-- Footer -->
   <div id="footer_container">
     <div id="footer">
-      &copy; Wiregrass Code Technology 2014-15. All rights reserved.
+      &copy; Wiregrass Code Technology 2014-17. All rights reserved.
     </div>
   </div>
 </apex:page>
